--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,38 +1,18 @@
-<footer class="site-footer">
-
-  <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
-    </div>
-
+<div class="footer" align="center">
+  <div class="col-1">
+    
   </div>
-
-</footer>
+  <div class="col-1" align="center">
+    <span class="footer-logo" align="center">
+      UniGDC
+    </span>
+  </div>
+  <div class="col-1">
+    
+  </div>
+  <div class="no-float" align="center"></div>
+  <div class="no-float" align="center">
+    Designed by <a href=http://diezcami.github.io target="_blank">Camille Diez</a><BR />
+    Powered by <a href=http://jekyllrb.com target="_blank">Jekyll</a>
+  </div>
+</div>
