--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,242 +1,252 @@
-/**
- * Site header
- */
-.site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
-    min-height: 56px;
+/* Site Header
+ * ============================================== */
+    .site-header {
+        min-height: 450px;
+        background-color: $brand-color;
+        background-image: url('');
+        background-size: cover;
+        background-position: center -170px;
+        background-attachment: fixed;
 
-    // Positioning context for the mobile navigation icon
-    position: relative;
-}
-
-.site-title {
-    font-size: 26px;
-    font-weight: 300;
-    line-height: 56px;
-    letter-spacing: -1px;
-    margin-bottom: 0;
-    float: left;
-
-    &,
-    &:visited {
-        color: $grey-color-dark;
-    }
-}
-
-.site-nav {
-    float: right;
-    line-height: 56px;
-
-    .menu-icon {
-        display: none;
-    }
-
-    .page-link {
-        color: $text-color;
-        line-height: $base-line-height;
-
-        // Gaps between nav items, but not on the last one
-        &:not(:last-child) {
-            margin-right: 20px;
+        @include media-query($on-palm) {
+            min-height: 250px;
+            background-position: center -250px;
         }
     }
 
-    @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: $spacing-unit / 2;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
-        text-align: right;
+    .site-header a, a h1:hover {color: #FFF};
 
-        .menu-icon {
-            display: block;
-            float: right;
-            width: 36px;
-            height: 26px;
-            line-height: 0;
-            padding-top: 10px;
-            text-align: center;
+    .site-header h1 {
+        display: block;
+        font-size: 80px !important;
+        line-height: 80px;
+        letter-spacing: 3px;
+        text-align: center;
+        padding-top: 20px;
+        clear: both;
+        font-family: 'Open Sans';
 
-            > svg {
-                width: 18px;
-                height: 15px;
-
-                path {
-                    fill: $grey-color-dark;
-                }
-            }
+        @include media-query($on-palm) {
+            font-size:60px !important;
+            letter-spacing: 0px;
         }
+    }
 
-        .trigger {
-            clear: both;
-            display: none;
-        }
+    .site-header span {
+        border: 10px solid #FFF;
+        padding: 0.3em 0.5em;
+        margin: 10px 20px;
+        display: inline-block;
 
-        &:hover .trigger {
-            display: block;
-            padding-bottom: 5px;
+        @include media-query($on-palm) {
+            margin: 10px 10px;
+            padding: 0.15em 0.4em;
         }
+    }
+
+    .site-nav {
+        float: right;
+        line-height: 56px;
+        margin-right: 25px;
+        padding-bottom: 100px;
 
         .page-link {
-            display: block;
-            padding: 5px 10px;
+            line-height: $base-line-height;
+            font-weight: bold;
+            letter-spacing: 0.05em;
 
-            &:not(:last-child) {
-                margin-right: 0;
+            &:not(:first-child) {
+                margin-left: 20px;
             }
-            margin-left: 20px;
+        }
+
+        .page-link:hover {
+            opacity: 0.8;
+        }
+
+        @include media-query($on-palm) {
+            padding-bottom: 10px;
         }
     }
-}
-
-
-
-/**
- * Site footer
- */
-.site-footer {
-    border-top: 1px solid $grey-color-light;
-    padding: $spacing-unit 0;
-}
-
-.footer-heading {
-    font-size: 18px;
-    margin-bottom: $spacing-unit / 2;
-}
-
-.contact-list,
-.social-media-list {
-    list-style: none;
-    margin-left: 0;
-}
-
-.footer-col-wrapper {
-    font-size: 15px;
-    color: $grey-color;
-    margin-left: -$spacing-unit / 2;
-    @extend %clearfix;
-}
-
-.footer-col {
-    float: left;
-    margin-bottom: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
-}
-
-.footer-col-1 {
-    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-    width:         calc(35% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-2 {
-    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-    width:         calc(20% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-3 {
-    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-    width:         calc(45% - (#{$spacing-unit} / 2));
-}
-
-@include media-query($on-laptop) {
-    .footer-col-1,
-    .footer-col-2 {
-        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-        width:         calc(50% - (#{$spacing-unit} / 2));
+    
+    .site-header-post {
+        
+    }
+    
+/* Site Footer
+ * ============================================== */
+    .footer {
+        padding-bottom: 3em;
+        margin: auto;
+        font-size: 12px;
+        font-family: Open Sans;
+        color: #959595;
+        max-width: -webkit-calc(700px - #{$grid-padding} * 2);
+        max-width:         calc(700px - #{$grid-padding} * 2);
     }
 
-    .footer-col-3 {
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
+    .footer-logo {
+        border: 7px solid $brand-color;
+        padding: 10px;
+        font-size: 45px;
+        font-family: 'Open Sans';
+        font-weight: bold;
+        
+        color: $brand-color;
+        
+        @include media-query($on-palm) {
+            padding: 5px;
+        }
     }
-}
 
-@include media-query($on-palm) {
-    .footer-col {
-        float: none;
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
+/* Individual Posts
+ * ============================================== */
+    .page-content {
+        padding: $spacing-unit 0;
+        text-align: justify;
     }
-}
 
+    .page-heading {
+        font-size: 20px;
+        padding-top: 2px;
+    }
 
+/* Archive
+ * ============================================== */
+    .post-list {
+        margin-left: 0;
+        list-style: none;
 
-/**
- * Page content
- */
-.page-content {
-    padding: $spacing-unit 0;
-}
+        > li {
+            display: block;
+            padding: 0.1em 1.5em;
+        }
 
-.page-heading {
-    font-size: 20px;
-}
+    }
 
-.post-list {
-    margin-left: 0;
-    list-style: none;
+    .post-link {
+        font-family: 'Open Sans';
+        font-weight: 300;
+        font-size: 1.5em;
+        letter-spacing: -1px;
+        color: #454545;
+        display: block;
+        width: 100%;
 
-    > li {
+        @include media-query($on-palm) {
+            font-size: 1.33em;
+        }
+    }
+
+    .post-meta {
+        font-size: $small-font-size;
+        color: $grey-color-light;
+        text-transform: uppercase;
+        display: inline-block;
+    }
+
+/* Post Format
+ * ============================================== */
+    .post-header {
         margin-bottom: $spacing-unit;
     }
-}
 
-.post-meta {
-    font-size: $small-font-size;
-    color: $grey-color;
-}
-
-.post-link {
-    display: block;
-    font-size: 24px;
-}
-
-
-
-/**
- * Posts
- */
-.post-header {
-    margin-bottom: $spacing-unit;
-}
-
-.post-title {
-    font-size: 42px;
-    letter-spacing: -1px;
-    line-height: 1;
-
-    @include media-query($on-laptop) {
-        font-size: 36px;
-    }
-}
-
-.post-content {
-    margin-bottom: $spacing-unit;
-
-    h2 {
-        font-size: 32px;
+    .post-title {
+        font-size: 42px;
+        letter-spacing: -1px;
+        line-height: 1;
 
         @include media-query($on-laptop) {
-            font-size: 28px;
+            font-size: 36px;
         }
     }
 
-    h3 {
-        font-size: 26px;
+    .post-content {
+        margin-bottom: $spacing-unit;
+        /*
+        h2 {
+            font-size: 32px;
 
-        @include media-query($on-laptop) {
-            font-size: 22px;
+            @include media-query($on-laptop) {
+                font-size: 28px;
+            }
+        }
+
+        h3 {
+            font-size: 26px;
+
+            @include media-query($on-laptop) {
+                font-size: 22px;
+            }
+        }
+
+        h4 {
+            font-size: 20px;
+
+            @include media-query($on-laptop) {
+                font-size: 18px;
+            }
+        } */
+    }
+    
+/* Simple Column Grid
+ * ============================================== */
+    .col-1 {
+        float: left;
+        position: relative;
+        min-height: 1px;
+        width: -webkit-calc(100% / 3);
+        width:    -moz-calc(100% / 3);
+        width:         calc(100% / 3);
+        padding-bottom: 3em;
+        
+        @include media-query($on-palm) {
+            clear: both;
+            width: -webkit-calc(100% - #{$grid-padding} * 2);
+            width:    -moz-calc(100% - #{$grid-padding} * 2);
+            width:         calc(100% - #{$grid-padding} * 2);
+            
+            padding-left:  $grid-padding;
+            padding-right: $grid-padding;
+            
+            margin: auto;
+            
         }
     }
-
-    h4 {
-        font-size: 20px;
-
-        @include media-query($on-laptop) {
-            font-size: 18px;
+    
+    .col-2 {
+        float: left;
+        position: relative;
+        min-height: 1px;
+        width: -webkit-calc(100% / 3 * 2);
+        width:    -moz-calc(100% / 3 * 2);
+        width:         calc(100% / 3 * 2);
+        
+        @include media-query($on-palm) {
+            clear: both;
+            width: -webkit-calc(100% - #{$grid-padding} * 2);
+            width:    -moz-calc(100% - #{$grid-padding} * 2);
+            width:         calc(100% - #{$grid-padding} * 2);
         }
     }
-}
+    
+    .col-3 {
+        float: left;
+        position: relative;
+        min-height: 1px;
+        width: 100%;
+        
+        @include media-query($on-palm) {
+            clear: both;
+            width: -webkit-calc(100% - #{$grid-padding} * 2);
+            width:    -moz-calc(100% - #{$grid-padding} * 2);
+            width:         calc(100% - #{$grid-padding} * 2);
+        }
+    }
+    
+/* Some Other Stuffs
+ * ============================================== */
+
+    .no-float {
+        clear: both;
+    }
