Made lots of changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,12 @@
   <div class="col-1">
     
   </div>
-  <div class="no-float" align="center"></div>
+  <div class="no-float" align="center">
+    Copyright © UniGDC
+    <br>
+    All rights reserved.
+    <hr>
+  </div>
   <div class="no-float" align="center">
     Designed by <a href=http://diezcami.github.io target="_blank">Camille Diez</a><BR />
     Powered by <a href=http://jekyllrb.com target="_blank">Jekyll</a>
