--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,8 +15,7 @@
   <link href='//fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css'>
   
   <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
-  <script src="/javascript/scrollex.js"></script>
-  <script src="/javascript/navscroll.js"></script>
+  <script src="/javascript/main.js"></script>
   
   <script>
     window.twttr = (function(d, s, id) {
