--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -1,3 +1,12 @@
-<div class="site-header-page">
-    
+<div class="site-header-post">
+  <nav class="site-nav-logo">
+    <a href="/"><span>UniGDC</span></a>
+  </nav>
+  <nav class="site-nav">
+    {% for page in site.pages %}
+      {% if page.title %}
+        <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+      {% endif %}
+    {% endfor %}
+  </nav>
 </div>
