--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -7,6 +7,10 @@
         background-size: cover;
         background-position: center -170px;
         background-attachment: fixed;
+        
+        -webkit-box-shadow: 0px 3px 4px #225F7F;
+           -moz-box-shadow: 0px 3px 4px #225F7F;
+                box-shadow: 0px 3px 4px #225F7F;
 
         @include media-query($on-palm) {
             min-height: 250px;
@@ -70,7 +74,40 @@
     }
     
     .site-header-post {
+        min-height: 56px;
+        background-color: $brand-color;
+        background-image: url('');
+        background-size: cover;
+        background-position: center -170px;
+        background-attachment: fixed;
         
+        
+        -webkit-box-shadow: 0px 2px 3px #005F7F;
+           -moz-box-shadow: 0px 2px 3px #005F7F;
+                box-shadow: 0px 2px 3px #005F7F;
+        
+        
+        .site-nav-logo {
+            float: left;
+            padding-top: 16px;
+            padding-left: calc(50% - 40px);
+            
+            & > a {
+                padding: 5px 5px;
+                border: 4px solid #FFF;
+                font-family: 'Open Sans';
+                font-weight: bold;
+                color: #FFF;
+            }
+            
+            @include media-query($on-palm) {
+                padding-left: 10px;
+            }
+        }
+        
+        & a {
+            color: #FFF;
+        }
     }
     
 /* Site Footer
@@ -249,4 +286,26 @@
 
     .no-float {
         clear: both;
+    }
+    
+    hr {
+        margin-top: $grid-padding;
+        margin-bottom : $grid-padding;
+    }
+    
+    .member-contact {
+        color: black;
+    }
+    
+    .signup-form {
+        @include media-query($on-palm) {
+            display: none;
+        }
+    }
+    
+    .signup-form-palm {
+        display: none;
+        @include media-query($on-palm) {
+            display: inherit;
+        }
     }
