--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,9 +10,9 @@
 
     {% include navigation.html %}
 
-    <section id="post" class="container content-section text-center">
+    <section id="post" class="container content-section">
       <div class="row">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-10 col-md-offset-1 ul-ol-left">
 
           {% include swipe-instructions.html %}
 
@@ -23,22 +23,13 @@
               . category:
               <a class="category" href="{{site.baseurl}}/categories/{{page.category | downcase}}.html">
                 {{ page.category }}
-              </a>.
-              <a href="{{site.baseurl}}{{page.url }}#disqus_thread">Comments</a>
-              <br />
-              {% for tag in page.tags %}
-                <a class="tag" href="{{site.baseurl}}/tags/{{tag}}.html">#{{ tag }}</a>
-              {% endfor %}
+              </a>
             </small>
           </h4>
-
+          
+          <hr>
           {{ page.content | markdownify }}
-
           {% include share.html %}
-
-          {% if jekyll.environment == "production" %}
-            {% include comments.html %}
-          {% endif %}
 
 
           <hr />
